# omu_at_a_glance

./: .gitignore  README.md  pyproject.toml
collector/: backfill.py  config.py  dedup.py  kaken.py  metrics.py  nameutil.py  openalex.py  parse.py  roster.py  sync.py
db/: models.py
deploy/: omu-researchers-web.service
docs/superpowers/plans/: 2026-07-02-about-page.md  2026-07-02-author-dedup.md  2026-07-02-compare-view.md  2026-07-02-fwci-total-ranks.md  2026-07-02-kaken-integration.md  2026-07-02-metrics-expansion.md  2026-07-02-phase1-openalex-mvp.md  2026-07-02-roster-achievements.md  2026-07-02-roster-departments.md  2026-07-02-ui-redesign.md  2026-07-02-web-viewer-mvp.md  2026-07-16-works-backfill.md
docs/superpowers/specs/: 2026-07-02-about-page-design.md  2026-07-02-author-dedup-design.md  2026-07-02-compare-view-design.md  2026-07-02-fwci-total-ranks-design.md  2026-07-02-kaken-integration-design.md  2026-07-02-metrics-expansion-design.md  2026-07-02-omu-researchers-data-design.md  (+5 more)
scripts/: sync.py
tests/: conftest.py  test_backfill.py  test_config.py  test_dedup.py  test_kaken_client.py  test_kaken_parse.py  test_kaken_sync.py  test_metrics.py  test_models.py  test_nameutil.py  test_openalex.py  test_parse.py  test_profile_parse.py  test_roster_parse.py  test_roster_sync.py  test_smoke.py  test_sync.py  test_web.py  test_web_queries.py
web/: app.py  queries.py
web/static/: compare.js  style.css
web/templates/: 404.html  about.html  base.html  compare.html  departments.html  ranking.html  researcher.html  search.html
